# inalpha

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md
services/_shared/: README.md  pyproject.toml
services/_shared/llm/: pyproject.toml
services/_shared/llm/src/inalpha_shared_llm/: __init__.py  client.py  config.py  types.py
services/_shared/llm/tests/: test_client.py
services/_shared/src/inalpha_shared/: __init__.py  auth.py  config.py  db.py  errors.py  logging.py  middleware.py
services/_shared/src/quant_lab_shared/: __init__.py  auth.py  config.py  db.py  errors.py  middleware.py
services/_shared/tests/: test_auth.py  test_errors.py  test_middleware.py
services/data/: .env.example  README.md  pyproject.toml  test_baostock_batch.py
services/data/scripts/: probe_baostock_batch.py
services/data/src/inalpha_data/: __init__.py  cache_manager.py  config.py  main.py  scheduler.py  schemas.py  venues.py
services/data/src/inalpha_data/api/: __init__.py  backfill.py  bars.py  constituents.py  fundamentals.py  fx.py  health.py  market.py  news.py  perp.py  symbols.py  ticker.py  web_fetch.py  web_search.py
services/data/src/inalpha_data/connectors/: __init__.py  _base.py  akshare.py  alpaca.py  baostock.py  binance.py  cn_market.py  fred.py  symbol_search.py  web_fetch.py  web_search.py  yfinance_conn.py
services/data/src/inalpha_data/storage/: __init__.py  bars.py  constituents.py
services/data/src/quant_lab_data/: __init__.py  config.py  main.py
services/data/src/quant_lab_data/api/: __init__.py  backfill.py  bars.py  health.py
services/data/src/quant_lab_data/connectors/: binance.py
services/data/tests/: conftest.py  test_api.py  test_backfill_router.py  test_baostock_batch.py  test_binance_perp.py  test_connectors.py  test_constituents.py  test_financials_pit.py  test_fundamentals.py  test_fx.py  test_health.py  test_market.py  test_migration_0036.py  test_news.py  test_perp_funding_router.py  test_scheduler.py  test_storage.py  test_symbol_search.py  test_ticker_router.py  test_venues.py  test_web_fetch.py  test_web_search.py  test_web_search_cache.py
services/evolver/: README.md  pyproject.toml
services/evolver/src/inalpha_evolver/: __init__.py  config.py  exceptions.py  main.py
services/evolver/src/inalpha_evolver/api/: routes.py  schemas.py
services/evolver/src/inalpha_evolver/evaluator/: __init__.py  fitness.py  runner.py
services/evolver/src/inalpha_evolver/governor/: __init__.py  hint_generator.py  loop.py  seed.py
services/evolver/src/inalpha_evolver/mutator/: __init__.py  diff_applier.py  llm_client.py  mock_client.py  prompt_templates.py
services/evolver/src/inalpha_evolver/population/: __init__.py  candidate.py
services/evolver/src/inalpha_evolver/sandbox/: __init__.py  ast_audit.py  contract_check.py
services/evolver/tests/: test_e2e.py  test_evaluator.py  test_governor.py  test_mutator.py  test_population.py  test_sandbox.py
services/factor/: pyproject.toml
services/factor/src/inalpha_factor/: __init__.py  account_id.py  backtest_score.py  config.py  custom_registry.py  data_client.py  deps.py  effectiveness.py  engine.py  expression.py  main.py  panel.py  schemas.py
services/factor/src/inalpha_factor/adapters/: __init__.py  alpha101_adapter.py  base.py  custom_adapter.py  macro_adapter.py  pandas_ta_adapter.py  qlib_alpha_adapter.py
services/factor/src/inalpha_factor/api/: __init__.py  backtest_score.py  candidates.py  catalog.py  compute.py  custom.py  health.py  panel.py  score.py  snapshot.py
services/factor/src/inalpha_factor/storage/: __init__.py  candidates.py
services/factor/tests/: conftest.py  test_adapters.py  test_api.py  test_cache.py  test_candidates.py  test_custom_score.py  test_data_client.py  test_effectiveness.py  test_engine_fresh.py  test_expression.py  test_macro.py  test_p0_p5.py  test_panel.py
services/paper/: .env.example  README.md  pyproject.toml
services/paper/configs/: risk_rules.toml
services/paper/scripts/: backfill_closed_trades.py  create_user.py  demo_risk_seed.py  smoke_e1_replay.py
services/paper/src/inalpha_paper/: __init__.py  account_id.py  config.py  data_client.py  factor_client.py  factor_patrol.py  fills.py  fx.py  live_runner.py  main.py  runner.py  schemas.py  sensitivity.py
services/paper/src/inalpha_paper/api/: __init__.py  archetypes.py  auth.py  backtest.py  health.py  orders.py  (+5 more)
services/paper/src/quant_lab_paper/: __init__.py  config.py  data_client.py  main.py  runner.py
services/paper/tests/: conftest.py  test_api_account_cash_flows.py  test_api_accounts_multicurrency.py  test_api_archetypes.py  test_api_backtest.py  test_api_orders.py  test_api_risk.py  test_api_risk_e2e.py  test_api_risk_factory_e2e.py  test_api_strategies.py  test_api_strategy_candidates.py  test_api_strategy_runs.py  test_archetypes.py  test_auth_login.py  test_backfill_closed_trades.py  test_backtest_e2e.py  test_backtest_perp_e2e.py  test_backtest_persistence.py  test_backtest_with_risk_rules.py  test_baseline_buy_and_hold_full_cash.py  test_breakout_volatility.py  test_clock.py  test_close_detector.py  test_closed_trades_e2e.py  test_closed_trades_integration.py  test_closed_trades_writer.py  test_compose.py  test_currency_resolver.py  test_cv.py  test_cv_backtest.py  test_data.py  test_data_client_pit.py  test_end_to_end_loop.py  test_exchange.py  test_exchange_resolver.py  test_execution.py  test_factor_patrol.py  test_fills_perp.py  test_fx_converter.py  test_live_runner.py  (+42 more)
services/research/: .env.example  README.md  pyproject.toml
services/research/src/inalpha_research/: __init__.py  config.py  data_client.py  debate.py  factor_client.py  main.py  manager.py  runner.py  schemas.py
services/research/tests/: conftest.py  test_analysts.py  test_api_deep_dive.py  test_debate.py  test_factor_wiring.py  test_factors_schema.py  test_fundamentals_pit.py  test_llm_client.py  test_manager.py  test_multi_market.py  test_personas.py  test_runner.py  test_venue_routing.py
(+440 files in other folders)
