[project]
name = "quant-lab-shared"
version = "0.1.0"
description = "Quant-Lab 各 service 共享的 FastAPI 基础设施（middleware / auth / db / errors）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary,pool]>=3.2.0",
    "pyjwt>=2.10.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # FastAPI TestClient 依赖
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_lab_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 DB / Redis 的集成测试（默认不跑）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = [
    "E501",     # line length 由 formatter 管
    "RUF001",   # 中文标点：业务上故意用中文写注释 / 字符串
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
