[project]
name = "inalpha-shared"
version = "0.1.0"
description = "Inalpha 各 service 共享的 FastAPI 基础设施（middleware / auth / db / errors）"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "psycopg[binary,pool]>=3.3.0",
    "pyjwt>=2.13.0",
    "structlog>=25.5.0",
    "python-dotenv>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.0",  # FastAPI TestClient 依赖
    "mypy>=2.1.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 DB / Redis 的集成测试（默认不跑）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = [
    "E501",     # line length 由 formatter 管
    "RUF001",   # 中文标点：业务上故意用中文写注释 / 字符串
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
