[project]
name = "inalpha-data"
version = "0.1.0"
description = "Inalpha data service: 行情接入 / 历史回放 / 实时订阅"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "inalpha-shared",
    "ccxt>=4.5.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.0",
    "mypy>=2.1.0",
    "ruff>=0.15.0",
]

[tool.uv.sources]
inalpha-shared = { path = "../_shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 DB / 网络的测试（默认跑；CI 可加 -m 'not integration' 跳过）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["ccxt", "ccxt.*"]
ignore_missing_imports = true
