[project]
name = "inalpha-data"
version = "0.2.0"
description = "Inalpha data service: 行情接入 / 历史回放 / 实时订阅"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "inalpha-shared",
    "ccxt>=4.5.0",
    "uvicorn[standard]>=0.47.0",
    # P1：扩到美股 + A股/港股
    # alpaca-py 走 IEX free feed（注册即免费，无信用卡）
    "alpaca-py>=0.30.0",
    # akshare 走东方财富 / 同花顺等公开页，零 key；同步库，需 asyncio.to_thread 包装
    "akshare>=1.13.0",
    # yfinance 全球兜底（韩 / 澳 / 印 / 巴西 / 全球指数等 akshare 没覆盖的）
    # 零 key，反爬偶发；同步库
    "yfinance>=0.2.40",
    # curl_cffi：yfinance 实际用的 HTTP 后端（impersonate=chrome）。虽由 yfinance 传递引入，
    # 但 YFINANCE_PROXY_URL 代理直接 import 它 patch Session.request——显式声明，让「yfinance 换版
    # 不再依赖 curl_cffi」这类回归在 uv lock/CI 阶段就报 lockfile diff，而非只靠运行时 error 日志。
    "curl-cffi>=0.7",
    # ddgs 聚合搜索（Bing/DuckDuckGo/Google 等，零 key，MIT 协议）
    "ddgs>=9.0.0",
    # FRED 全球宏观（圣路易斯联储），免费 key 注册；80 万+ 经济序列
    "fredapi>=0.5.2",
    "trafilatura>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.0",
    "mypy>=2.1.0",
    "ruff>=0.15.0",
]

[tool.uv.sources]
inalpha-shared = { path = "../_shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 DB / 网络的测试（默认跑；CI 可加 -m 'not integration' 跳过）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "ccxt", "ccxt.*",
    "akshare", "akshare.*",
    "ddgs", "ddgs.*",
    "yfinance", "yfinance.*",
    "curl_cffi", "curl_cffi.*",
    "fredapi", "fredapi.*",
]
ignore_missing_imports = true
