[project]
name = "inalpha-evolver"
version = "0.1.0"
description = "Inalpha 策略演化引擎 —— LLM-as-mutation-operator 单代/多代演化闭环"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "inalpha-paper",
    "fastapi>=0.136.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "psycopg[binary,pool]>=3.3.0",
    "unidiff>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_evolver"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true