[project]
name = "quant-lab-paper"
version = "0.1.0"
description = "Quant-Lab paper / live / backtest 三合一引擎：内核（Clock + MessageBus + Strategy）+ Gateway + Engine"
requires-python = ">=3.12"
dependencies = [
    "quant-lab-shared",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[tool.uv.sources]
quant-lab-shared = { path = "../_shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_lab_paper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 DB / 网络的集成测试（默认跑）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
