[project]
name = "inalpha-paper"
version = "0.1.0"
description = "Inalpha paper / live / backtest 三合一引擎：内核（Clock + MessageBus + Strategy）+ Gateway + Engine"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "inalpha-shared",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.47.0",
    "httpx>=0.28.0",
    "backtester-mcp>=0.1.0",
    "exchange-calendars>=4.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.0",  # mock httpx
    "mypy>=2.1.0",
    "ruff>=0.15.0",
]

[tool.uv.sources]
inalpha-shared = { path = "../_shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_paper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 DB / 网络的集成测试（默认跑）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
