[project]
name = "inalpha-research"
version = "0.1.0"
description = "Inalpha research service: 多 agent LLM 决策（TradingAgents 风格）"
requires-python = ">=3.12"
dependencies = [
    "inalpha-shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",   # DeepSeek 也走 OpenAI-compatible API
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[tool.uv.sources]
inalpha-shared = { path = "../_shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 LLM / 网络的测试（默认跑）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true
