[project]
name = "inalpha-research"
version = "0.2.0"
description = "Inalpha research service: 多 agent LLM 决策（TradingAgents 风格）"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "inalpha-shared",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.47.0",
    "httpx>=0.28.0",
    # OpenAI-compat 家族共用：deepseek / openai / kimi / zhipu / ollama
    "openai>=2.38.0",
    # 原生 SDK provider
    "anthropic>=0.45.0",
    "google-genai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.0",
    "mypy>=2.1.0",
    "ruff>=0.15.0",
]

[tool.uv.sources]
inalpha-shared = { path = "../_shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: 需要真实 LLM / 网络的测试（默认跑）",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*", "anthropic", "anthropic.*", "google", "google.*"]
ignore_missing_imports = true
