[project]
name = "inalpha-shared-llm"
version = "0.1.0"
description = "Inalpha LLM 客户端抽象层 —— Anthropic SDK 封装 + ADR-0014 cache 友好接口"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.60.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.0",
    "mypy>=2.1.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inalpha_shared_llm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true